Completed assignment 2 except for Matrix multiplikation

--- a/Exercises/EN/Numpy_Pandas/2_Working_with_NumPy.ipynb
+++ b/Exercises/EN/Numpy_Pandas/2_Working_with_NumPy.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/pt/26yk257s5nd579ngn9gyw3k40000gn/T/ipykernel_7884/3030904066.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbool_1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/pt/26yk257s5nd579ngn9gyw3k40000gn/T/ipykernel_47469/3030904066.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbool_1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m: boolean index did not match indexed array along dimension 1; dimension is 3 but corresponding boolean dimension is 4"
      ]
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,9 +529,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.   2.  23.   1. ]\n",
+      " [ 2.   2.  19.6  1. ]\n",
+      " [ 2.   2.  16.7  2. ]\n",
+      " [ 3.   3.  17.8  2. ]\n",
+      " [ 2.   2.  17.2  2. ]\n",
+      " [ 3.   3.  16.9  3. ]\n",
+      " [ 2.   2.  27.1  4. ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# create a boolean array for trips with average\n",
     "# speeds greater than 20,000 mph\n",
@@ -558,11 +572,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code below\n"
+    "# Start your code below\n",
+    "tip_bool = taxi[:, 12] > 50 #selects all rows, and their values in oclumn with index 12\n",
+    "top_tips = taxi[tip_bool, 5:14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.016e+03 1.000e+00 1.000e+00 ... 1.165e+01 6.999e+01 1.000e+00]\n",
+      " [2.016e+03 1.000e+00 1.000e+00 ... 8.000e+00 5.430e+01 1.000e+00]\n",
+      " [2.016e+03 1.000e+00 1.000e+00 ... 0.000e+00 3.780e+01 2.000e+00]\n",
+      " ...\n",
+      " [2.016e+03 6.000e+00 3.000e+01 ... 5.000e+00 6.334e+01 1.000e+00]\n",
+      " [2.016e+03 6.000e+00 3.000e+01 ... 8.950e+00 4.475e+01 1.000e+00]\n",
+      " [2.016e+03 6.000e+00 3.000e+01 ... 0.000e+00 5.484e+01 2.000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(taxi)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16, 9)\n",
+      "0.01786511835640911\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top_tips.shape)\n",
+    "\n",
+    "pct_top_tip = top_tips.shape[0]/taxi.shape[0] * 100\n",
+    "print(pct_top_tip)\n",
+    "# answer: 16 rides left a tip larger than 50\n",
+    "# if you gave a tip higher than 50 dollar, you belong to the 0.018 % most generous tippers"
    ]
   },
   {
@@ -587,9 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['orange' 'blue' 'black' 'blue' 'purple']\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array(['red','blue','black','blue','purple'])\n",
     "a[0] = 'orange'\n",
@@ -605,9 +675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['orange' 'blue' 'black' 'pink' 'pink']\n"
+     ]
+    }
+   ],
    "source": [
     "a[3:] = 'pink'\n",
     "print(a)"
@@ -622,9 +700,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  1  1  1  1]\n",
+      " [ 1  1 99  1  1]\n",
+      " [ 1  1  1  1  1]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones = np.array([[1, 1, 1, 1, 1],\n",
     "                 [1, 1, 1, 1, 1],\n",
@@ -642,9 +730,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[42 42 42 42 42]\n",
+      " [ 1  1 99  1  1]\n",
+      " [ 1  1  1  1  1]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones[0] = 42\n",
     "print(ones)"
@@ -659,9 +757,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[42 42  0 42 42]\n",
+      " [ 1  1  0  1  1]\n",
+      " [ 1  1  0  1  1]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones[:,2] = 0\n",
     "print(ones)"
@@ -678,14 +786,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False  True  True  True]\n",
+      "[ 1  2 99 99 99]\n"
+     ]
+    }
+   ],
    "source": [
     "a2 = np.array([1, 2, 3, 4, 5])\n",
     "\n",
-    "a2_bool = a2 > 2\n",
+    "# a boolen array creates an array with the same size as the array compared with, with true for the indexes in the array that satisfies the condition and false for the others\n",
     "\n",
+    "a2_bool = a2 > 2\n",
+    "print(a2_bool)\n",
     "a2[a2_bool] = 99\n",
     "\n",
     "print(a2)"
@@ -700,15 +819,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3, 4, 5])\n",
     "\n",
     "a [ a > 2] = 99\n",
     "\n",
-    "print(a)"
+    "print(a)\n",
+    "\n"
    ]
   },
   {
@@ -722,9 +850,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4 99 99]\n",
+      " [99 99 99]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.array([\n",
     "                [1,2,3],\n",
@@ -748,16 +886,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True  True]\n",
+      "[[ 1  2  3]\n",
+      " [ 4 99  6]\n",
+      " [ 7 99  9]]\n"
+     ]
+    }
+   ],
    "source": [
     "c = np.array([\n",
     "                [1,2,3],\n",
     "                [4,5,6],\n",
     "                [7,8,9]           \n",
     "])\n",
-    "\n",
+    "print(c[:,1] > 2)\n",
     "c[c[:,1] > 2, 1] = 99\n",
     "\n",
     "print(c)"
