--- a/Assignments/EN/Assignment_2.ipynb
+++ b/Assignments/EN/Assignment_2.ipynb
@@ -16,10 +16,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_squared(N):\n",
+    "    squares = []\n",
+    "    for i in range(1,N+1):\n",
+    "        if i %2 == 0:\n",
+    "            squares.append(i*i)\n",
+    "    return squares\n",
+    "print(even_squared(6))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +46,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '1 23 432 213412'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/pt/26yk257s5nd579ngn9gyw3k40000gn/T/ipykernel_46377/3239982898.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0modd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mread_number\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mread_number\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0meven\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mread_number\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '1 23 432 213412'"
+     ]
+    }
+   ],
+   "source": [
+    "even = []\n",
+    "odd = []\n",
+    "while True:\n",
+    "    read_number = int(input())\n",
+    "    if int(read_number) % 2 == 0:\n",
+    "        even.append(read_number)\n",
+    "    else:\n",
+    "        odd.append(read_number)\n",
+    "    if read_number == -1:\n",
+    "        break\n",
+    "\n",
+    "print(sorted(even))\n",
+    "print(sorted(odd))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,8 +88,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 234, 34, 52, 432]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_numbers = [int(x) for x in input(\"enter any number of number separated by space\").split()]\n",
+    "def even_account(l1):\n",
+    "    even_elements = []\n",
+    "    for x in l1:\n",
+    "        if x % 2 == 0:\n",
+    "            even_elements.append(x)\n",
+    "    return(even_elements)\n",
+    "\n",
+    "print(even_account(list_of_numbers))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1496000518321, 15129, 1024, 119025, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [int(x) for x in input(\"enter a number of integeres\").split()]\n",
+    "def squared(lx):\n",
+    "    l2 = []\n",
+    "    for x in lx:\n",
+    "        l2.append(x*x)\n",
+    "    return l2\n",
+    "\n",
+    "print(squared(l1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[534, 234, 97, 65, 54, 43, 34, 32, 12, 8, 3, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [int(x) for x in input().split()]\n",
+    "l2 = [int(x) for x in input().split()]\n",
+    "\n",
+    "def descending(first,second):\n",
+    "    for x in second:\n",
+    "        first.append(x)\n",
+    "    return(sorted(first, reverse=True))\n",
+    "\n",
+    "print(descending(l1,l2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,10 +187,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 4, 10, 50, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [int(x) for x in input().split()]\n",
+    "def adding(a, *arg):\n",
+    "    a = a + [int(x) for x in arg]\n",
+    "    return(a)\n",
+    "\n",
+    "print(adding(A,4,10,50,1))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,10 +224,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [int(x) for x in input().split()]\n",
+    "B = [x for x in input().split()]\n",
+    "def intersection(l1,l2):\n",
+    "    l3 = []\n",
+    "    for x in l1:\n",
+    "        if x in l2 and x not in l3:\n",
+    "            l3.append(x)\n",
+    "    for x in l2:\n",
+    "        if x in l1 and x not in l3:\n",
+    "            l3.append(x)\n",
+    "    return sorted(l3)\n",
+    "intersection(A, B)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,6 +265,38 @@
     ">>>> union(A,B)\n",
     "> [-2, ,-1, 0, 1, 2, 10]\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-2, -1, 0, 1, 2, 10]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [int(x) for x in input().split()]\n",
+    "B = [int(x) for x in input().split()]\n",
+    "\n",
+    "def union(l1,l2):\n",
+    "    l3 = []\n",
+    "    for x in l1:\n",
+    "        if x not in l3:\n",
+    "            l3.append(x)\n",
+    "    for x in l2:\n",
+    "        if x not in l3:\n",
+    "            l3.append(x)\n",
+    "    return sorted(l3)\n",
+    "union(A, B)"
    ]
   },
   {
@@ -151,7 +318,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def intersection2(*arg):\n",
+    "    intersections = []\n",
+    "    \n",
+    "    for list in arg:\n",
+    "        idx = 0\n",
+    "        for value in list:\n",
+    "            if value in [x for x in arg[idx+1:len(arg)+1]]:\n",
+    "                intersection.append(value)\n",
+    "            idx = idx + 1\n",
+    "\n",
+    "    return sorted(intersections)\n",
+    "intersection2([2,2,2,1,3,4,5,12][1,2,4,6])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
