--- a/Exercises/EN/Numpy_Pandas/3_Intro_to_Pandas_answers.ipynb
+++ b/Exercises/EN/Numpy_Pandas/3_Intro_to_Pandas_answers.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "Sinopec Group                        19     713288                    106523  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "AutoNation                                     2310  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "Name: rank, Length: 500, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -639,123 +639,6 @@
    "source": [
     "## 6. Selecting Columns From a DataFrame by Label Continued\n",
     "Below, we use a list of labels to select specific columns:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>rank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Walmart</th>\n",
-       "      <td>USA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>State Grid</th>\n",
-       "      <td>China</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sinopec Group</th>\n",
-       "      <td>China</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>China National Petroleum</th>\n",
-       "      <td>China</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Toyota Motor</th>\n",
-       "      <td>Japan</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Teva Pharmaceutical Industries</th>\n",
-       "      <td>Israel</td>\n",
-       "      <td>496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>New China Life Insurance</th>\n",
-       "      <td>China</td>\n",
-       "      <td>497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wm. Morrison Supermarkets</th>\n",
-       "      <td>Britain</td>\n",
-       "      <td>498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TUI</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AutoNation</th>\n",
-       "      <td>USA</td>\n",
-       "      <td>500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>500 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                country  rank\n",
-       "Walmart                             USA     1\n",
-       "State Grid                        China     2\n",
-       "Sinopec Group                     China     3\n",
-       "China National Petroleum          China     4\n",
-       "Toyota Motor                      Japan     5\n",
-       "...                                 ...   ...\n",
-       "Teva Pharmaceutical Industries   Israel   496\n",
-       "New China Life Insurance          China   497\n",
-       "Wm. Morrison Supermarkets       Britain   498\n",
-       "TUI                             Germany   499\n",
-       "AutoNation                          USA   500\n",
-       "\n",
-       "[500 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f500.loc[:,[\"country\", \"rank\"]]"
    ]
   },
   {
@@ -872,6 +755,123 @@
     }
    ],
    "source": [
+    "f500.loc[:,[\"country\", \"rank\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Walmart</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State Grid</th>\n",
+       "      <td>China</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sinopec Group</th>\n",
+       "      <td>China</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>China National Petroleum</th>\n",
+       "      <td>China</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toyota Motor</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Teva Pharmaceutical Industries</th>\n",
+       "      <td>Israel</td>\n",
+       "      <td>496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New China Life Insurance</th>\n",
+       "      <td>China</td>\n",
+       "      <td>497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wm. Morrison Supermarkets</th>\n",
+       "      <td>Britain</td>\n",
+       "      <td>498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TUI</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AutoNation</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                country  rank\n",
+       "Walmart                             USA     1\n",
+       "State Grid                        China     2\n",
+       "Sinopec Group                     China     3\n",
+       "China National Petroleum          China     4\n",
+       "Toyota Motor                      Japan     5\n",
+       "...                                 ...   ...\n",
+       "Teva Pharmaceutical Industries   Israel   496\n",
+       "New China Life Insurance          China   497\n",
+       "Wm. Morrison Supermarkets       Britain   498\n",
+       "TUI                             Germany   499\n",
+       "AutoNation                          USA   500\n",
+       "\n",
+       "[500 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "f500[[\"country\",\"rank\"]]"
    ]
   },
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
        "[500 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,15 +1060,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                ceo  \\\n",
+      "Walmart                         C. Douglas McMillon   \n",
+      "State Grid                                  Kou Wei   \n",
+      "Sinopec Group                             Wang Yupu   \n",
+      "China National Petroleum              Zhang Jianhua   \n",
+      "Toyota Motor                            Akio Toyoda   \n",
+      "...                                             ...   \n",
+      "Teva Pharmaceutical Industries    Yitzhak Peterburg   \n",
+      "New China Life Insurance                   Wan Feng   \n",
+      "Wm. Morrison Supermarkets            David T. Potts   \n",
+      "TUI                               Friedrich Joussen   \n",
+      "AutoNation                       Michael J. Jackson   \n",
+      "\n",
+      "                                                       industry  \\\n",
+      "Walmart                                   General Merchandisers   \n",
+      "State Grid                                            Utilities   \n",
+      "Sinopec Group                                Petroleum Refining   \n",
+      "China National Petroleum                     Petroleum Refining   \n",
+      "Toyota Motor                           Motor Vehicles and Parts   \n",
+      "...                                                         ...   \n",
+      "Teva Pharmaceutical Industries                  Pharmaceuticals   \n",
+      "New China Life Insurance        Insurance: Life, Health (stock)   \n",
+      "Wm. Morrison Supermarkets                  Food and Drug Stores   \n",
+      "TUI                                             Travel Services   \n",
+      "AutoNation                                  Specialty Retailers   \n",
+      "\n",
+      "                                                sector  \n",
+      "Walmart                                      Retailing  \n",
+      "State Grid                                      Energy  \n",
+      "Sinopec Group                                   Energy  \n",
+      "China National Petroleum                        Energy  \n",
+      "Toyota Motor                    Motor Vehicles & Parts  \n",
+      "...                                                ...  \n",
+      "Teva Pharmaceutical Industries             Health Care  \n",
+      "New China Life Insurance                    Financials  \n",
+      "Wm. Morrison Supermarkets           Food & Drug Stores  \n",
+      "TUI                                  Business Services  \n",
+      "AutoNation                                   Retailing  \n",
+      "\n",
+      "[500 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Start your code below:\n",
     "\n",
     "countries = f500[\"country\"]\n",
     "revenues_years = f500[[\"revenues\",\"years_on_global_500_list\"]]\n",
-    "ceo_to_sector = f500.loc[:,\"ceo\":\"sector\"]"
+    "ceo_to_sector = f500.loc[:,\"ceo\":\"sector\"]\n",
+    "print(ceo_to_sector)"
    ]
   },
   {
@@ -1090,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
