--- a/Exercises/EN/Numpy_Pandas/4_Exploring_Data_with_Pandas_Fundamentals_answers.ipynb
+++ b/Exercises/EN/Numpy_Pandas/4_Exploring_Data_with_Pandas_Fundamentals_answers.ipynb
@@ -73,22 +73,24 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 500 entries, Walmart to AutoNation\n",
       "Data columns (total 16 columns):\n",
-      "rank                        500 non-null int64\n",
-      "revenues                    500 non-null int64\n",
-      "revenue_change              498 non-null float64\n",
-      "profits                     499 non-null float64\n",
-      "assets                      500 non-null int64\n",
-      "profit_change               436 non-null float64\n",
-      "ceo                         500 non-null object\n",
-      "industry                    500 non-null object\n",
-      "sector                      500 non-null object\n",
-      "previous_rank               500 non-null int64\n",
-      "country                     500 non-null object\n",
-      "hq_location                 500 non-null object\n",
-      "website                     500 non-null object\n",
-      "years_on_global_500_list    500 non-null int64\n",
-      "employees                   500 non-null int64\n",
-      "total_stockholder_equity    500 non-null int64\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   rank                      500 non-null    int64  \n",
+      " 1   revenues                  500 non-null    int64  \n",
+      " 2   revenue_change            498 non-null    float64\n",
+      " 3   profits                   499 non-null    float64\n",
+      " 4   assets                    500 non-null    int64  \n",
+      " 5   profit_change             436 non-null    float64\n",
+      " 6   ceo                       500 non-null    object \n",
+      " 7   industry                  500 non-null    object \n",
+      " 8   sector                    500 non-null    object \n",
+      " 9   previous_rank             500 non-null    int64  \n",
+      " 10  country                   500 non-null    object \n",
+      " 11  hq_location               500 non-null    object \n",
+      " 12  website                   500 non-null    object \n",
+      " 13  years_on_global_500_list  500 non-null    int64  \n",
+      " 14  employees                 500 non-null    int64  \n",
+      " 15  total_stockholder_equity  500 non-null    int64  \n",
       "dtypes: float64(3), int64(7), object(6)\n",
       "memory usage: 66.4+ KB\n"
      ]
@@ -944,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -952,17 +954,17 @@
      "output_type": "stream",
      "text": [
       "0      33\n",
-      "159     1\n",
-      "147     1\n",
-      "148     1\n",
-      "149     1\n",
+      "1       1\n",
+      "302     1\n",
+      "334     1\n",
+      "325     1\n",
       "Name: previous_rank, dtype: int64\n",
       "\n",
-      "NaN       33\n",
-      " 471.0     1\n",
-      " 234.0     1\n",
-      " 125.0     1\n",
-      " 166.0     1\n",
+      "NaN      33\n",
+      "1.0       1\n",
+      "302.0     1\n",
+      "334.0     1\n",
+      "325.0     1\n",
       "Name: previous_rank, dtype: int64\n"
      ]
     }
@@ -1026,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
